--- a/week2/assignments/calendar/calendar.html
+++ b/week2/assignments/calendar/calendar.html
@@ -8,7 +8,15 @@
     </head>
     <body>
         <div class='calendarWrapper'>
-            <div class='calendarTitle'></div>
+            <div class='calendarTitle'>
+                
+            </div>
+            <div class='monthTitle'>
+                <select class="month" id="month"></select>
+                <input type="text">
+                <button id="btn" onclick="printCalendar()">Go</button>
+            </div>
+
             <div class='calendar' id='calendarDays'></div>
         </div>
     </body>
