--- a/week3/exercises/arrowThis.html
+++ b/week3/exercises/arrowThis.html
@@ -4,7 +4,7 @@
         <title>JavaScript This</title>
         <button id='btn' title='button'>Click Me</button>
     </body>
-    <script>
+    <script src="moviesArrow.js">
         let demo = function() {
             console.log(this)
         }
@@ -14,6 +14,6 @@
         window.addEventListener('load', demo)
 
         document.getElementById('btn').addEventListener('click', demo)
-
+        
     </script>
 </html>
