--- a/week4/assignments/scavenger/scavenger.html
+++ b/week4/assignments/scavenger/scavenger.html
@@ -34,7 +34,7 @@
                 <button id='submit'>Submit</button>
             </div>
         </div>
-        <div id='AllItems' class='text'></div>
+        <div id='allItems' class='text'></div>
     </body>
     <script src='scavenger.js'></script>
 </html>
