Weather App initial

--- a/week6/assignment/weather.html
+++ b/week6/assignment/weather.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
     <head>
         <title>Current Weather</title>
         <link rel='stylesheet' href='weather.css' />
@@ -28,7 +28,11 @@
             <div class='footer'>&copy; 2021 Socrates Online</div>
         </div>
 
-    </body>
+    
 
-    <!-- This app should use modularized scripts. Use the proper syntax to include whatever script(s) are necessary -->
+        <!-- This app should use modularized scripts. Use the proper syntax to include whatever script(s) are necessary -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.25.0/axios.min.js" integrity="sha512-/Q6t3CASm04EliI1QyIDAA/nDo9R8FQ/BULoUFyN4n/BDdyIxeH7u++Z+eobdmr11gG5D/6nPFyDlnisDwhpYA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src='scripts/weather.js'></script>
+    
+    </body>
 </html>
