--- a/week6/assignment/weather.html
+++ b/week6/assignment/weather.html
@@ -32,7 +32,7 @@
 
         <!-- This app should use modularized scripts. Use the proper syntax to include whatever script(s) are necessary -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.25.0/axios.min.js" integrity="sha512-/Q6t3CASm04EliI1QyIDAA/nDo9R8FQ/BULoUFyN4n/BDdyIxeH7u++Z+eobdmr11gG5D/6nPFyDlnisDwhpYA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script src='scripts/weather.js'></script>
+        <script type="module" src='./scripts/weather.js'></script>
     
     </body>
 </html>
