--- a/capstone/index.html
+++ b/capstone/index.html
@@ -7,32 +7,42 @@
 <html>
     <head>
         <title>My Own Bug Tracker</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div id='reportWrapper' class='reportWrapper'>
-            <div id='topbar' class='topbar'><img src='./images/bug.png' alt='bug icon' style='height:20px; width:20px;' /> Report a New Bug</div>
-                <form id='bugForm' action='#' onsubmit='reportBug(); return false'>
-                    <div id='reporterByDiv' class='userInput'>
-                        <input placeholder='Reported By' type='text' id='reportedBy' style='width:97%' />
-                    </div>
-                    <div id='systemDiv' class='userInput'>
-                        <select id='system' style='width:100%'></select>
-                    </div>
-                    <div id='subSystemDiv' class='userInput'>
-                        <select id='subSystem' style='width:100%'></select>
-                    </div>
-                    <div id='bugDescrDiv' class='userInput'>
-                        <textarea id='bugDesc' style='width:98%' placeholder='Desribe the bug'></textarea>
-                    </div>
-                    <div id='bttnDiv' style='text-align: right;'>
-                        <button type='reset' id='resetBtn'>Reset</button>
-                        <button type='submit' id='submitBtn'>Submit</button>
-                    </div>
-                </form>
+        <div class="grid-container">
+            <div id='reportWrapper' class='reportWrapper'>
+                <div id='topbar' class='topbar'><img src='./images/bug.png' alt='bug icon' style='height:20px; width:20px;' /> Report a New Bug</div>
+                    <form id='bugForm' action='#'>
+                        <div id='reporterByDiv' class='userInput'>
+                            <input placeholder='Reported By' type='text' id='reportedBy' style='width:97%' />
+                        </div>
+                        <div id='systemDiv' class='userInput'>
+                            <select id='system' style='width:100%'></select>
+                        </div>
+                        <div id='subSystemDiv' class='userInput'>
+                            <select id='subSystem' style='width:100%'></select>
+                        </div>
+                        <div id='bugDescrDiv' class='userInput'>
+                            <textarea id='bugDesc' style='width:98%' placeholder='Desribe the bug'></textarea>
+                        </div>
+                        <div id='bttnDiv' style='text-align: right;'>
+                            <button type='reset' id='resetBtn'>Reset</button>
+                            <button type='submit' id='submitBtn'>Submit</button>
+                        </div>
+                    </form>
+                </div>
             </div>
-            <br />
-            <div id='listWrapper' class='listWrapper'></div>
+                <br />
+                <div id='listWrapper' class='listWrapper'></div>
         </div>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.25.0/axios.min.js" integrity="sha512-/Q6t3CASm04EliI1QyIDAA/nDo9R8FQ/BULoUFyN4n/BDdyIxeH7u++Z+eobdmr11gG5D/6nPFyDlnisDwhpYA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script type="json" src="data.json"></script>
+        <script type="module" src='scripts/bug.js'></script>
+        <script type="module" src='scripts/data.js'></script>
+
+
     </body>
 
 </html>
